--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hack32 - Tracking Non-Entities</title>
-    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+    <title>Hack32</title>
     <link rel="stylesheet" href="css/base.css">
 </head>
 <body>
@@ -47,7 +46,7 @@
     </section>
 </main>
 <footer>
-    <p>&copy; 2023 Hack32. All rights reserved.</p>
+    <p>&copy; 2024 Hack32. All rights reserved.</p>
 </footer>
 <script src="js/script.js"></script>
 </body>
