--- a/BradynD/index.html
+++ b/BradynD/index.html
@@ -65,7 +65,7 @@
 <div class="content">
   <section id="about">
     <h2>About the Non-entity</h2>
-    <p>Bradyn D is completely dissociated from the outside world. Went through the Non-entity process despite out attempts at help.</p>
+    <p>Bradyn D is completely dissociated from the outside world. Went through the Non-entity process despite our attempts at help.</p>
   </section>
   <section id="sightings">
     <h2></h2>
