--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="JakobH/" class="non-entity">Jakob H - Isolationism.</a>
             <a href="WillowM/" class="non-entity">Willow M - Idiotic.</a>
             <a href="WesE/" class="non-entity">Wes E - Pushover.</a>
-            <a href="BradynD/" class="non-entity">Bradyn D. - Disgustingly ignorant.</a>
+            <a href="BradynD/" class="non-entity">Bradyn D - Disgustingly ignorant.</a>
             <a href="MaddoxF/" class="non-entity">Maddox F - Lost Cause.</a>
         </ul>
     </section>
